Archive2/01/9b88246fc66d7c/output
main.cpp:22:10: error: use of class template 'std::reference_wrapper' requires template arguments
    std::reference_wrapper a = std::ref(one);
         ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/functional:399:11: note: template is declared here
    class reference_wrapper
          ^
1 error generated.
